traefik-config/argo-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo
  namespace: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`argo.internal`)
    kind: Rule
    services:
    - name: argocd-server
      namespace: argocd
      port: 80
