traefik-config/plex-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`plex.internal`)
    kind: Rule
    services:
    - name: plex
      port: plex
